# 15min-city-bench

./: .gitignore  main.ipynb  multimodal_results.csv  pyproject.toml
data/: news.xlsx
