[project]
name = "15min-city-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "datasets>=4.0.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "ollama>=0.5.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "protobuf>=6.31.1",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.3",
]
